--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header {
     align-items: center;
 }
 #left-header h1 {
-    color: rgb(60, 80, 40);
+    color: rgb(64, 112, 244);
     font-weight: bolder;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 60px;
@@ -38,11 +38,14 @@ header {
     height: 80px;
 }
 #right-header {
-    color: #ff5757;
+    color: rgb(12, 38, 50);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 
+}
+.is-current *{
+    color: rgb(64, 112, 244);
 }
 .navbar-buttons a{
     width: 100px;
@@ -52,7 +55,7 @@ header {
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
-    color: #ff5757;
+    color: rgb(12, 38, 50);
 }
 @keyframes navbar-hover {
    0% {
